tests/snapshots/messages__type1_caribbean.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,15MrVH0000KH<:V:NtBLoqFP2H9:,0*2F\")"
---
PositionReport(
    PositionReport {
        message_type: 1,
        repeat_indicator: 0,
        mmsi: 366913120,
        navigation_status: Some(
            UnderWayUsingEngine,
        ),
        rate_of_turn: None,
        speed_over_ground: Some(
            0.0,
        ),
        position_accuracy: UnaugmentedGnss,
        longitude: Some(
            -64.62066,
        ),
        latitude: Some(
            18.321188,
        ),
        course_over_ground: Some(
            329.5,
        ),
        true_heading: Some(
            299,
        ),
        timestamp: 16,
        maneuver_indicator: None,
        raim: true,
        radio_status: Sotdma(
            SotdmaMessage {
                sync_state: UtcDirect,
                slot_timeout: 6,
                sub_message: SlotNumber(
                    586,
                ),
            },
        ),
    },
)
