tests/snapshots/messages__type1_french_vessel.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,13HOI:0P0000VOHLCnHQKwvL05Ip,0*23\")"
---
PositionReport(
    PositionReport {
        message_type: 1,
        repeat_indicator: 0,
        mmsi: 227006760,
        navigation_status: Some(
            UnderWayUsingEngine,
        ),
        rate_of_turn: Some(
            NotAvailable,
        ),
        speed_over_ground: Some(
            0.0,
        ),
        position_accuracy: UnaugmentedGnss,
        longitude: Some(
            0.13138,
        ),
        latitude: Some(
            49.47558,
        ),
        course_over_ground: Some(
            36.7,
        ),
        true_heading: None,
        timestamp: 14,
        maneuver_indicator: None,
        raim: false,
        radio_status: Sotdma(
            SotdmaMessage {
                sync_state: UtcDirect,
                slot_timeout: 1,
                sub_message: UtcHourAndMinute(
                    11,
                    30,
                ),
            },
        ),
    },
)
