tests/snapshots/messages__type1_mississippi.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,15N9NLPP01IS<RFF7fLVmgvN00Rv,0*7F\")"
---
PositionReport(
    PositionReport {
        message_type: 1,
        repeat_indicator: 0,
        mmsi: 367156850,
        navigation_status: Some(
            UnderWayUsingEngine,
        ),
        rate_of_turn: Some(
            NotAvailable,
        ),
        speed_over_ground: Some(
            0.1,
        ),
        position_accuracy: UnaugmentedGnss,
        longitude: Some(
            -90.17844,
        ),
        latitude: Some(
            38.65875,
        ),
        course_over_ground: Some(
            175.0,
        ),
        true_heading: None,
        timestamp: 15,
        maneuver_indicator: None,
        raim: false,
        radio_status: Sotdma(
            SotdmaMessage {
                sync_state: UtcDirect,
                slot_timeout: 0,
                sub_message: SlotOffset(
                    2238,
                ),
            },
        ),
    },
)
