tests/snapshots/messages__type1_st_lawrence.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,14eGKMhP00rkraHJPivPFwvL0<0<,0*23\")"
---
PositionReport(
    PositionReport {
        message_type: 1,
        repeat_indicator: 0,
        mmsi: 316005239,
        navigation_status: Some(
            UnderWayUsingEngine,
        ),
        rate_of_turn: Some(
            NotAvailable,
        ),
        speed_over_ground: Some(
            0.0,
        ),
        position_accuracy: Dgps,
        longitude: Some(
            -72.54478,
        ),
        latitude: Some(
            46.33343,
        ),
        course_over_ground: Some(
            9.1,
        ),
        true_heading: None,
        timestamp: 14,
        maneuver_indicator: None,
        raim: false,
        radio_status: Sotdma(
            SotdmaMessage {
                sync_state: UtcDirect,
                slot_timeout: 3,
                sub_message: ReceivedStations(
                    12,
                ),
            },
        ),
    },
)
