tests/snapshots/messages__type1_yangtze_underway.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,169a:nP01g`hm4pB7:E0;@0L088i,0*5E\")"
---
PositionReport(
    PositionReport {
        message_type: 1,
        repeat_indicator: 0,
        mmsi: 412764890,
        navigation_status: Some(
            UnderWayUsingEngine,
        ),
        rate_of_turn: None,
        speed_over_ground: Some(
            11.1,
        ),
        position_accuracy: Dgps,
        longitude: Some(
            122.51504,
        ),
        latitude: Some(
            31.652834,
        ),
        course_over_ground: Some(
            4.5,
        ),
        true_heading: Some(
            0,
        ),
        timestamp: 14,
        maneuver_indicator: None,
        raim: false,
        radio_status: Sotdma(
            SotdmaMessage {
                sync_state: UtcDirect,
                slot_timeout: 2,
                sub_message: SlotNumber(
                    561,
                ),
            },
        ),
    },
)
