tests/snapshots/messages__type20_one_reservation.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,D1mg=5@6A6fp,2*44\")"
---
DataLinkManagement(
    DataLinkManagement {
        message_type: 20,
        repeat_indicator: 0,
        mmsi: 123456789,
        offset1: 100,
        number1: 4,
        timeout1: 3,
        increment1: 750,
        offset2: None,
        number2: None,
        timeout2: None,
        increment2: None,
        offset3: None,
        number3: None,
        timeout3: None,
        increment3: None,
        offset4: None,
        number4: None,
        timeout4: None,
        increment4: None,
    },
)
